# openshift_virtualization_migration_ci

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/secret-detection/: Dockerfile  action.yml  entrypoint.sh
.github/scripts/: ansible-validate-tokens.sh  linting.sh
.github/workflows/: _prepare-stage.yml  _publish-stage.yml  _release-stage.yml  _report-stage.yml  _secrets-stage.yml  _setup_environment.yml  _test-stage.yml  ci-ansible-collection.yml  ci-cd.yml  demo.yml
ci-python-env/: .containerignore  Containerfile  requirements-ci.txt  requirements.txt
